--- a/docker_test/osrm-backend-docker/Dockerfile
+++ b/docker_test/osrm-backend-docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:trusty
+FROM debian:stretch-slim as builder
 
 # Let the container know that there is no TTY
 ENV DEBIAN_FRONTEND noninteractive
@@ -11,9 +11,6 @@ RUN apt-get -y update && apt-get install -y \
     git \
     libboost-all-dev \
     libbz2-dev \
-    libstxxl-dev \
-    libstxxl-doc \
-    libstxxl1 \
     libtbb-dev \
     libxml2-dev \
     libzip-dev \
@@ -24,17 +21,21 @@ RUN apt-get -y update && apt-get install -y \
     pkg-config
 
 RUN mkdir -p /osrm-build \
- && mkdir -p /osrm-data
-
+ && mkdir -p /osrm-data \
+ && mkdir -p /osrm-src
+COPY . /osrm-src
 WORKDIR /osrm-build
 
-RUN curl --silent -L https://github.com/Project-OSRM/osrm-backend/archive/v5.2.6.tar.gz -o v5.2.6.tar.gz \
- && tar xzf v5.2.6.tar.gz \
- && mv osrm-backend-5.2.6 /osrm-src \
- && cmake /osrm-src \
- && make \
- && mv /osrm-src/profiles/car.lua profile.lua \
- && mv /osrm-src/profiles/lib/ lib \
+RUN cd /osrm-src \
+ && echo "list files in osrm-src" \
+ && ls -l \
+ && mkdir -p build \
+ && cd build \ 
+ && cmake --version \
+ && cmake .. \
+ && make -j4\
+ && mv /osrm-src/profiles/car.lua /osrm-build/profile.lua \
+ && mv /osrm-src/profiles/lib/ /osrm-build/lib \
  && echo "disk=/tmp/stxxl,25000,syscall" > .stxxl \
  && rm -rf /osrm-src
 
